--- a/app/src/main/res/layout/activity_suratditolak.xml
+++ b/app/src/main/res/layout/activity_suratditolak.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/img31" />
 
     <ImageButton
-        android:id="@+id/imagebacksuratditolak"
+        android:id="@+id/back"
         android:contentDescription="logo surat diterima"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -59,10 +59,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.027"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.177" />
+        app:layout_constraintVertical_bias="0.189" />
 
     <ImageView
         android:id="@+id/ImageButton01"
@@ -71,10 +71,10 @@
         android:background="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241"
+        app:layout_constraintVertical_bias="0.248"
         app:srcCompat="@drawable/transkripditolak" />
 
     <Button
