--- a/app/src/main/res/layout/activity_suratlulus.xml
+++ b/app/src/main/res/layout/activity_suratlulus.xml
@@ -22,7 +22,7 @@
         android:id="@+id/imageView19"
         android:layout_width="446dp"
         android:layout_height="888dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="160dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,19 +30,34 @@
         app:srcCompat="@drawable/frameaktif" />
 
     <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Surat Keterangan"
+        android:textColor="#ffffff"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.418"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.087" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Surat Keterangan Lulus"
+        android:text="Lulus"
         android:textColor="#FFC727"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.581"
+        app:layout_constraintHorizontal_bias="0.837"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintVertical_bias="0.087" />
 
     <ImageButton
         android:id="@+id/imageback"
@@ -98,34 +113,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.265" />
 
+
     <TextView
         android:id="@+id/textViewdeskripsi"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
+        android:contentDescription="Deskripsi Surat Keterangan Lulus"
         android:justificationMode="inter_word"
+        android:lineSpacingExtra="2dp"
         android:text="Surat Keterangan Lulus merupakan dokumen yang diterbitkan dengan tujuan untuk menerangkan jika mahasiswa yang bersangkutan sudah menyelesaikan masa studinya di sekolah atau perguruan tinggi."
         android:textColor="#7D8BB7"
         android:textSize="10sp"
-        android:lineSpacingExtra="2dp"
-        android:contentDescription="Deskripsi Surat Keterangan Lulus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.337" />
-
+        app:layout_constraintVertical_bias="0.315" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_width="109dp"
+        android:layout_height="43dp"
         android:backgroundTint="#FFC727"
+        android:padding="8dp"
         android:text="Ajukan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.229"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.392" />
@@ -178,7 +193,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView18"
-        app:layout_constraintVertical_bias="0.825"
+        app:layout_constraintVertical_bias="0.746"
         app:srcCompat="@drawable/syarat" />
 
     <TextView
@@ -191,10 +206,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.684" />
+        app:layout_constraintVertical_bias="0.677" />
 
     <TextView
         android:id="@+id/textView11"
@@ -208,7 +222,7 @@
         app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.768" />
+        app:layout_constraintVertical_bias="0.74" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
