--- a/app/src/main/res/layout/activity_transkipnilai3.xml
+++ b/app/src/main/res/layout/activity_transkipnilai3.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView38"
-        android:layout_width="444dp"
-        android:layout_height="262dp"
+        android:layout_width="502dp"
+        android:layout_height="306dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
@@ -241,4 +241,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView67"
         app:layout_constraintVertical_bias="0.518" />
+
+    <TextView
+        android:id="@+id/textView52"
+        android:layout_width="376dp"
+        android:layout_height="23dp"
+        android:text="Untuk Keperluan"
+        android:textColor="#7D8BB7"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.714"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView67"
+        app:layout_constraintVertical_bias="0.615" />
+
+    <ImageView
+        android:id="@+id/imageView68"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.745"
+        app:srcCompat="@android:drawable/checkbox_on_background" />
+
+    <TextView
+        android:id="@+id/textView53"
+        android:layout_width="376dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="31dp"
+        android:text="Daftar Beasiswa"
+        android:textColor="#7D8BB7"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toEndOf="@+id/imageView40"
+        app:layout_constraintStart_toStartOf="@+id/imageView40"
+        app:layout_constraintTop_toTopOf="@+id/imageView67"
+        app:layout_constraintVertical_bias="0.678" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
