--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -39,7 +39,7 @@
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kaluna"
+        android:text="Aruni"
         android:textColor="@color/blue_500"
         android:textStyle="bold"
         android:textSize="16sp"
